Add subscribed report listing and profile update API
